# subgraph-status

./: Cargo.toml  Readme.md  schme.graphql
src/: api.rs  helpers.rs  main.rs  output.rs
