[package]
name = "subgraph"
version = "0.1.0"
edition = "2021"

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1", features = ["full"] }
colored = "2.0.0"
prettytable-rs = "0.10.0"
regex = "*"

[[bin]]
edition = "2018"
name = "subgraph"
path = "src/main.rs"
